# phys

./: Dockerfile  README.md  README.txt  cppcheckdata.py  cps_constraints.py  prob_phys_units.py  requirements.txt  str_utils.py
data/AGNC-Lab_Quad/multithreaded/: kalman.cpp  stateMachine.h
data/crossover_nav/src/: MAF.h  Quadmax_yum_to_pc.cpp  Ulink.h  Ulink_capter.cpp  Ulink_capter.h  Ulink_capter_and_inertial_nav.h  alt.h  att_estimator.h  compass.h  controlsystem.h  crossover_node.cpp  motor (thanabodee bulunsrichart's conflicted copy 2015-06-16).h  mpu6050 (thanabodee bulunsrichart's conflicted copy 2015-06-16).h  offb_node.cpp  quad.cpp  quad_inertial_nav.cpp  simulate_optimize_gps.cpp
data/gki_navigation/channel_controller/: channel_controller_plugins.xml  package.xml
data/hanp_prediction/src/: human_pose_prediction.cpp
data/haptic_teleoperation/src/: CollisionDetection.cpp  ForceField.cpp  ForceFieldTests.cpp  PositionController.cpp  SlaveController.cpp  VirtualImpedanceForce.cpp  ardrone_keyboard.cpp  nodeBrf.cpp  nodePrf.cpp  take_off.cpp  testing_pf.cpp  uav_commander.cpp
data/jaguar_base/src/: motor_and_sensors_controller.cpp  motor_and_sensors_controller.cpp.variable_unit
data/kaqi_driver/src/: base_driver.cpp  base_driver.h  drive_widget.h  kaqi_dashboard.cpp  kaqi_dashboard_node.cpp  pid.h
data/lama_jockeys/: package.xml
data/lama_jockeys/action/: Localize.action  Navigate.action
data/lama_jockeys/include/lama_jockeys/: jockey.h  localizing_jockey.h
data/lama_jockeys/src/: localizing_jockey.cpp  navigating_jockey.cpp
data/localAStar/include/: MakeMarker.h  MapMaker.h  node.h
data/localAStar/src/: MapMaker.cpp
data/okao_client/src/: eye_contact.h  eye_contact3_2.cpp  eye_contact4_1.cpp  eye_contact5_1.cpp  eye_contact5_2.cpp  eye_contact_move_base.cpp  interaction_test.cpp  people_position_server2.cpp  people_recog_info.cpp  test_robot_control.cpp
data/peter_chargingpile_search/src/: robot_state.cpp  search_chargingpile_FSM.h  search_chargingpile_manager.cpp  search_chargingpile_manager.h
data/steering_behaviors_controller/include/: AgentQLTraining.h  Factory.h  ObstacleAvoidance.h
data/steering_behaviors_controller/src/: AgentQLTraining.cpp  Seek.cpp  (+2 more)
data/summit_xl_sim_groovy_v1.0/: readme_robotnik.txt
data/summit_xl_sim_groovy_v1.0/robotnik_msgs/: CMakeLists.txt  package.xml
docs/: Dockerfile  INSTALL.txt  LICENSE  README.md  STATUS.txt  index.html
docs/docs/: .data.html.swp  .start.html.swp  data.html  license.html  start.html
docs/src/: constraint_solver.py  datamining2.py  error_checker.py
src/: constraint_collector.py  constraint_scoper.py  datamining.py  datamining_self_var2type.pkl  datamining_self_vars.pkl  error_rechecker.py  symbol_helper.py  tree_walker.py  unit_error.py  unit_error_types.py
src/DATA/: test_hand_annotations.txt  types_data.txt
src/pgm/: __init__.py  pgm.py
(+804 files in other folders)
